src/test/resources/public/input/typechecking/fail/main_structure/fail05.jova
class Main {

}

class Test{
    private Main a;

    private Main func() {
        return 1;
    }

    private int func(int a, Main b) {
       return 1;
    }

    private int func(int a) {
       Main b;
       return 1;
    }

}